--- a/photobook/try2/index.html
+++ b/photobook/try2/index.html
@@ -14,7 +14,7 @@
   <div id="container">
     <!-- ヘッダー -->
     <header id="header">
-      <h1><a href="index.html">PHOTO BOOK</a></h1>
+      <h2><a href="index.html">PHOTO BOOK</a></h1>
     </header>
 
     <!-- メイン -->
@@ -37,26 +37,28 @@
 
       <!-- DETAIL -->
       <section id="detail">
-        <h2>DETAIL</h2>
-        <div>
-          <div><img src="img/detail.jpg" alt="detail"></div>
-          <div>
-            <h3>タイトルタイトルタイトル</h3>
-            <hr>
-            <dl>
-              <dt>著者</dt>
-              <dd>タイトルタイトルタイトル</dd>
-              <dt>出版社</dt>
-              <dd>タイトルタイトルタイトル</dd>
-              <dt>発行年</dt>
-              <dd>タイトルタイトルタイトル</dd>
-            </dl>
-            <hr>
+        <div id="inner">
+          <h2>DETAIL</h2>
+          <div id="inner_inner">
+            <div><img src="img/detail.jpg" alt="detail"></div>
             <div>
-              テキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト
-            </div>
-            <div>
-              <a href="#" _blank="">オンラインストアで見る</a>
+              <h3>タイトルタイトルタイトル</h3>
+              <hr>
+              <dl id="book_detail">
+                <dt>著者</dt>
+                <dd>タイトルタイトルタイトル</dd>
+                <dt>出版社</dt>
+                <dd>タイトルタイトルタイトル</dd>
+                <dt>発行年</dt>
+                <dd>タイトルタイトルタイトル</dd>
+              </dl>
+              <hr>
+              <div id="text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </div>
+              <div>
+                <a href="#" _blank="">オンラインストアで見る</a>
+              </div>
             </div>
           </div>
         </div>
@@ -65,7 +67,9 @@
     </main>
 
     <!-- フッター -->
-    <footer id="footer">© 2020 PHOTO BOOK</footer>
+    <footer id="footer">
+      <p>© 2020 PHOTO BOOK</p>
+    </footer>
 
   </div>
 
