add: レビュー記録を追加

--- a/photobook/try2/index.html
+++ b/photobook/try2/index.html
@@ -14,12 +14,16 @@
   <div id="container">
     <!-- ヘッダー -->
     <header id="header">
-      <h2><a href="index.html">PHOTO BOOK</a></h1>
+      <h1>
+        <a href="index.html">PHOTO BOOK</a>
+      </h1>
     </header>
 
     <!-- メイン -->
     <main>
-      <div id="mainvisual"><img src="img/mainvisual.jpg" alt="mainvisual"></div>
+      <div id="mainvisual">
+        <img src="img/mainvisual.jpg" alt="mainvisual">
+      </div>
 
       <!-- INDEX -->
       <section id="index">
